[package]
name = "tracker-epic-diagram"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
lazy_static = "1.4"
regex = "1.4"
clap = "2.19.0"
chrono = "0.4"
